--- a/Makefile_indexcompress
+++ b/Makefile_indexcompress
@@ -6,8 +6,8 @@ CC := clang++
 COMPILE_OPT := -std=c++17
 INC = -I$(LIB_PATH)
 
-TARGET = ringTest
-TEST_SRCS = ringTest.cpp
+TARGET = indexCompressTest
+TEST_SRCS = indexCompressTest.cpp
 COMPONENT_SRCS = 
 SRCS = $(addprefix $(TEST_PATH), $(TEST_SRCS)) $(addprefix $(COMPONENT_PATH), $(COMPONENT_SRCS))
 # TEST_OBJS = $(TEST_SRCS:.cpp=.o)
